project button overlap img fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -416,15 +416,10 @@ a:hover{
 }
 
 .prj_bottom{
-    height: 500px;
-    width: auto;
-    border-radius: 6px;
     display: flex;
     flex-direction: column;
-    column-gap: 5px;
-    /* justify-content: space-between; */
+    column-gap: 1em;
     align-items: center;
-
     padding-top: 2em;
 
     /* border: 2px solid red; */
@@ -443,17 +438,18 @@ a:hover{
     font-weight: 500;
 }
 
-
-
 .prj_img{
     width: auto;
     /* padding: 10px; */
     /* margin: 10px; */
     max-width: 75%;
     /* min-width: 300px; */
-    height: 65%;
+    height: 60%;
     border-radius: 0.5em;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.75);
+    /* margin-bottom: 5em; */
+
+    /* border: 2px solid red; */
 }
 
 
